--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -12,6 +12,9 @@
     />
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="main">
