--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -15,8 +15,8 @@ body {
 
 #app {
     width: 100%;
-    height: 100%;
-    background-color: #fdf0d5;    
+    height: 100%; 
+    background: #023e8a 
 }
 
 h3 {
@@ -24,15 +24,40 @@ h3 {
     font-size: 5rem;
     font-weight: 400;
     margin: 0;
-    color: #780000
+    color: #EAF0F6
 }
+h5 {
+  font-family: 'Rubik Glitch';
+  font-size: 2rem;
+  font-weight: 400;
+  margin: 0;
+  color: #EAF0F6
+}
+
+
+h2 {
+  font-family: 'Roboto';
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin: 0;
+  color: #EAF0F6;
+}
+
+h6 {
+  font-family: 'Roboto';
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0;
+  color: #EAF0F6;
+}
+
 
 h1 {
     font-family: 'Roboto';
-    font-size: 2rem;
-    font-weight: 400;
+    font-size: 5rem;
+    font-weight: 700;
     margin: 0;
-    color: #c1121f;
+    color: #EAF0F6;
 }
 
 .rectangle {
@@ -40,7 +65,7 @@ h1 {
   width: 480px;
   color: #EAF0F6;
   border-style: solid;
-  border-color: #780000;
+  border-color: #000;
 }
 
 .center {
@@ -60,78 +85,127 @@ h1 {
 }
 
 .inputfile + label {
+    font-family: 'Roboto';
     max-width: 80%;
     font-size: 1.25rem;
     color: #EAF0F6;
-    background-color: #c1121f;    
-    border-radius: 10px;
+    border: 1px outset rgba(255,255,255, 0.2);
+    background:rgba(255,255,255, 0.1);
     /* 20px */
-    font-weight: 700;
+    font-weight: 400;
     text-overflow: ellipsis;
     white-space: nowrap;
     cursor: pointer;
     display: inline-block;
     overflow: hidden;
     padding: 0.625rem 1.25rem;
+    border-radius: 10px;
     /* 10px 20px */
 }
 
 .inputfile:focus + label,
 .inputfile.has-focus + label {
-    outline: 1px dotted #000;
-    outline: -webkit-focus-ring-color auto 5px;
+  border-color: rgba(255,255,255, 0.4);
+  background:rgba(255,255,255, 0.2);
+  outline: -webkit-focus-ring-color auto 5px;
 }
 
 .inputfile + label svg {
-    width: 1em;
-    height: 1em;
-    vertical-align: middle;
-    fill: currentColor;
-    margin-top: -0.25em;
+  width: 1em;
+  height: 1em;
+  vertical-align: middle;
+  fill: currentColor;
+  margin-top: -0.25em;
     /* 4px */
-    margin-right: 0.25em;
+  margin-right: 0.25em;
     /* 4px */
 }
 
 .inputfile:focus + label,
 .inputfile.has-focus + label,
 .inputfile + label:hover {
-    background-color: #780000;
+  border-color: rgba(255,255,255, 0.4);
+  background:rgba(255,255,255, 0.2);
 }
 
 .createbutton {
+    font-weight: 400;
+    font-family: 'Roboto';
     max-width: 80%;
     font-size: 1.25rem;
     color: #EAF0F6;
-    background-color: #669bbc;    
-    border-radius: 10px;
+    border: 1px outset rgba(255,255,255, 0.2);
+    background:rgba(255,255,255, 0.1);  
     /* 20px */
-    font-weight: 100;
     text-overflow: ellipsis;
     white-space: nowrap;
     cursor: pointer;
     display: inline-block;
     overflow: hidden;
     padding: 0.625rem 1.25rem;
+    border-radius: 10px;
     /* 10px 20px */
 }
 
 .createbutton:focus,
 .createbutton.has-focus {
-    outline: 1px dotted #000;
+    border-color: rgba(255,255,255, 0.4);
+    background:rgba(255,255,255, 0.2);
     outline: -webkit-focus-ring-color auto 5px;
 }
 
 .createbutton:hover {
-    background-color: #780000;
-    color: #EAF0F6;
+    border-color: rgba(255,255,255, 0.4);
+    background:rgba(255,255,255, 0.2);
+}
+
+.namebutton {
+  font-weight: 400;
+  font-family: 'Roboto';
+  max-width: 80%;
+  font-size: 1.25rem;
+  color: #EAF0F6;
+  border: 1px outset rgba(255,255,255, 0.2);
+  background:rgba(255,255,255, 0.1);  
+  /* 20px */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  padding: 0.625rem 1.25rem;
+  border-radius: 10px;
+  text-align: center;
+  /* 10px 20px */
+}
+
+.namebutton:focus,
+.namebutton.has-focus {
+  border-color: rgba(255,255,255, 0.4);
+  background:rgba(255,255,255, 0.2);
+  outline: -webkit-focus-ring-color auto 5px;
+}
+
+.namebutton:hover {
+  border-color: rgba(255,255,255, 0.4);
+  background:rgba(255,255,255, 0.2);
+  cursor: text;
+}
+
+::placeholder {
+  color: #EAF0F6;
+  opacity: 1; /* Firefox */
+}
+
+::-ms-input-placeholder { /* Edge 12 -18 */
+  color: #EAF0F6;
 }
 
 .loader {
     margin: auto;
     border: 10px solid #EAF0F6;
     border-radius: 50%;
-    border-top: 10px solid #ffbe98;
+    border-top: 10px solid #EAF0F6;
     width: 100px;
     height: 100px;
     animation: spinner 3s linear infinite;
@@ -154,10 +228,10 @@ h1 {
     width: 64px;
     height: 64px;
     margin: 8px;
-    border: 8px solid #c1121f;
+    border: 8px solid #EAF0F6;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #c1121f transparent transparent transparent;
+    border-color: #EAF0F6 transparent transparent transparent;
   }
   .lds-ring div:nth-child(1) {
     animation-delay: -0.45s;
@@ -177,7 +251,7 @@ h1 {
     }
   }
   
-  .backbutton {
+  .helpbutton {
     max-width: 80%;
     font-size: 1.25rem;
     color: #EAF0F6;
@@ -192,15 +266,23 @@ h1 {
     overflow: hidden;
     padding: 0.625rem 1.25rem;
     /* 10px 20px */
+
 }
 
-.backbutton:focus,
-.backbutton.has-focus {
+.helpbutton:focus,
+.helpbutton.has-focus {
     outline: 1px dotted #000;
     outline: -webkit-focus-ring-color auto 5px;
 }
 
-.backbutton:hover {
-    background-color: #780000;
+.helpbutton:hover {
+    background-color: #000;
     color: #EAF0F6;
+}
+
+#gradient {
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
 }
