--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -15,12 +15,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Pixels&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="main">
-      <div id="app"></div>
+    <div id="gradient">
+      <div id="main">
+        <div id="app"></div>
+      </div>
     </div>
-
     <script src="{% static "frontend/main.js" %}"></script>
   </body>
 </html>
+
