--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -47,16 +47,8 @@ h3 {
     font-size: 5rem;
     font-weight: 400;
     margin: 0;
-    color: #AE2012;
+    color: #E9D8A6;
 }
-h5 {
-  font-family: 'Rubik Glitch';
-  font-size: 2rem;
-  font-weight: 400;
-  margin: 0;
-  color: #AE2012;
-}
-
 
 h2 {
   font-family: 'Roboto';
@@ -89,6 +81,28 @@ h1 {
   color: #EAF0F6;
   border-style: solid;
   border-color: #000;
+}
+
+.choice {
+  height: 202.5px;
+  width: 360px;
+  color: #EAF0F6;
+  border-style: solid;
+  border-color: #000;
+}
+
+.counter {
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  font-family: 'Roboto';
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin: 0;
+  color: #E9D8A6;
+  border-style: solid;
+  border-color: #000;
+  background: #AE2012;
 }
 
 .center {
@@ -314,12 +328,12 @@ background:rgba(255, 255, 255, .2);
 }
 
 .homebutton {
-  fill: #AE2012;
+  fill: #EE9B00;
   width: 40px;
   height: 40px;
 }
 
 .homebutton:hover path{
-  fill: #9B2226;
+  fill: #CA6702;
 }
 
