--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -83,6 +83,13 @@ h1 {
   border-color: #000;
 }
 
+.small-thmnl {
+  height: 202.5px;
+  width: 360px;
+  color: #EAF0F6;
+  border: 2px inset #9B2226;
+}
+
 .choice {
   height: 202.5px;
   width: 360px;
