--- a/staticfiles/css/index.css
+++ b/staticfiles/css/index.css
@@ -19,6 +19,9 @@ body {
   width: 100%;
   height: 100%; 
   margin: 1px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .home{
@@ -66,6 +69,14 @@ h6 {
   color: #E9D8A6;
 }
 
+h4 {
+  font-family: 'Roboto';
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin: 0;
+  color: #94D2BD;
+}
+
 
 h1 {
     font-family: 'Roboto';
@@ -94,7 +105,7 @@ h1 {
   height: 202.5px;
   width: 360px;
   color: #EAF0F6;
-  border: 2px inset #9B2226;
+  border: 3px inset #9B2226;
 }
 
 .choice:hover {
@@ -331,13 +342,13 @@ background:rgba(255, 255, 255, .2);
 }
 
 .helpbutton {
-  fill: #005F73;
-  width: 45px;
-  height: 45px;
+  fill: #AE2012;
+  width: 30px;
+  height: 30px;
 }
 
 .helpbutton:hover path{
-  fill: #0A9396;
+  fill: #BB3E03;
 }
 
 .homebutton {
