--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/svg+xml" href="images/play.svg"/>
     <title>youttube rewind</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"
@@ -19,8 +20,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Pixels&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Roboto&family=Rubik+Pixels&display=swap" rel="stylesheet">
   </head>
   <body>
       <div id="main">
