--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/svg+xml" href="images/play.svg"/>
-    <title>youttube rewind</title>
+    <title>YoutTube Rewind</title>
     {% load static %}
+    <link rel="shortcut icon" type="image/svg+xml" href="{% static "images/play.svg" %}"/>
     <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
