--- a/staticfiles/css/index.css
+++ b/staticfiles/css/index.css
@@ -54,8 +54,8 @@ h3 {
 }
 
 h2 {
-  font-family: 'Roboto';
-  font-size: 2.5rem;
+  font-family: 'Orbitron';
+  font-size: 2rem;
   font-weight: 400;
   margin: 0;
   color: #E9D8A6;
@@ -70,7 +70,7 @@ h6 {
 }
 
 h4 {
-  font-family: 'Roboto';
+  font-family: 'Orbitron';
   font-size: 1.25rem;
   font-weight: 400;
   margin: 0;
@@ -79,7 +79,7 @@ h4 {
 
 
 h1 {
-    font-family: 'Roboto';
+    font-family: 'Orbitron';
     font-size: 5rem;
     font-weight: 700;
     margin: 0;
@@ -94,11 +94,26 @@ h1 {
   border-color: #000;
 }
 
+.minirectangle {
+  height: 135px;
+  width: 240px;
+  color: #EAF0F6;
+  border-style: solid;
+  border-color: #000;
+}
+
 .small-thmnl {
   height: 202.5px;
   width: 360px;
   color: #EAF0F6;
-  border: 2px inset #9B2226;
+  border: 2px outset #0A9396;
+}
+
+.mini-thmnl {
+  height: 101px;
+  width: 180px;
+  color: #EAF0F6;
+  border: 2px outset #0A9396;
 }
 
 .choice {
@@ -113,12 +128,42 @@ h1 {
   border-color: #0A9396;
 }
 
+.minichoice {
+  height: 101.25px;
+  width: 180px;
+  color: #EAF0F6;
+  border: 3px inset #9B2226;
+}
+
+.minichoice:hover {
+  cursor: pointer;
+  border-color: #0A9396;
+}
+
 .counter {
   height: fit-content;
   width: fit-content;
+  min-width: 33px;
+  min-height: 50px;
   padding: 10px;
-  font-family: 'Roboto';
+  font-family: 'Orbitron';
   font-size: 2.5rem;
+  font-weight: 400;
+  margin: 0;
+  color: #E9D8A6;
+  border-style: solid;
+  border-color: #000;
+  background: #AE2012;
+}
+
+.minicounter {
+  height: fit-content;
+  width: fit-content;
+  min-width: 23px;
+  min-height: 35px;
+  padding: 7px;
+  font-family: 'Orbitron';
+  font-size: 1.75rem;
   font-weight: 400;
   margin: 0;
   color: #E9D8A6;
@@ -144,7 +189,7 @@ h1 {
 }
 
 .inputfile + label {
-  font-family: 'Roboto';
+  font-family: 'Orbitron';
   font-weight: 400;
   font-size: 1.25rem;
   color: #E9D8A6;
@@ -186,13 +231,13 @@ h1 {
 }
 
 .createbutton {
-    font-family: 'Roboto';
+    font-family: 'Orbitron';
     font-weight: 400;
     font-size: 1.25rem;
     color: #E9D8A6;
     max-width: 80%;
-    border: 1px outset rgba(255, 255, 255, .2);
-    background:rgba(255, 255, 255, .1);  
+    border: 1px outset rgba(148, 210, 189);
+    background:rgba(148, 210, 189, .1);  
     /* 20px */
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -206,27 +251,25 @@ h1 {
 
 .createbutton:focus,
 .createbutton.has-focus {
-    background:rgba(255, 255, 255, .2);
+    background:rgba(148, 210, 189, .2);
     outline: -webkit-focus-ring-color auto 5px;
 }
 
 .createbutton:hover {
-  background:rgba(255, 255, 255, .2);
+  background:rgba(148, 210, 189, .2);
 }
 
 .namebutton {
-  font-family: 'Roboto';
+  font-family: 'Orbitron';
   font-weight: 400;
   font-size: 1.25rem;
   color: #E9D8A6;
-  max-width: 80%;
   border: 1px outset rgba(255, 255, 255, .2);
   background:rgba(255, 255, 255, .1);  
   /* 20px */
   text-overflow: ellipsis;
   white-space: nowrap;
   cursor: pointer;
-  display: inline-block;
   overflow: hidden;
   padding: 0.62rem 1.25rem;
   border-radius: 10px;
@@ -310,8 +353,8 @@ h1 {
 .playbutton {
   align-items: center;
   max-width: fit-content;
-  border: 1px outset rgba(255, 255, 255, .2);
-  background:rgba(255, 255, 255, .1);  
+  border: 1px outset RGB(148, 210, 189);
+  background:rgba(148, 210, 189, .1);  
   display: grid;
   grid-template-columns: auto 1fr;
   justify-content: center;
@@ -321,7 +364,7 @@ h1 {
 }
 .playText {
   color: #E9D8A6;
-  font-family: 'Roboto';
+  font-family: 'Orbitron';
   font-weight: 400;
   font-size: 1.25rem;  
   justify-self: center;
@@ -334,30 +377,30 @@ h1 {
 }
 .playbutton:focus,
 .playbutton.has-focus {
-  background:rgba(255, 255, 255, .2);
+  background:rgba(148, 210, 189, .2);
   outline: -webkit-focus-ring-color auto 5px;
 }
 .playbutton:hover {
-background:rgba(255, 255, 255, .2);
+background:rgba(148, 210, 189, .2);
 }
 
 .helpbutton {
-  fill: #AE2012;
+  fill: #CA6702;
   width: 30px;
   height: 30px;
 }
 
 .helpbutton:hover path{
-  fill: #BB3E03;
+  fill: #EE9B00;
 }
 
 .homebutton {
-  fill: #EE9B00;
+  fill: #005F73;
   width: 40px;
   height: 40px;
 }
 
 .homebutton:hover path{
-  fill: #CA6702;
+  fill: #0A9396;
 }
 
